<resources>
    <string name="app_name">VisualMusic</string>
    <string name="upper_app_name">VISUALMUSIC</string>


    <!--  Time Units  -->
    <string name="time_unit_hours">ч</string>
    <string name="time_unit_minutes">мин</string>
    <string name="time_unit_seconds">сек</string>


    <!--  Bottom Navigation Menu  -->
    <string name="gallery_screen_title">Галерея работ</string>
    <string name="main_screen_title">Главный экран</string>
    <string name="collection_screen_title">Коллекции</string>


    <!--  Main Screen Top App Bar  -->
    <string name="theme">Сменить тему</string>
    <string name="content_description_theme">Сменить тему</string>

    <string name="logout">Выйти из аккаунта</string>
    <string name="content_description_logout">Выйти из аккаунта</string>

    <!--  Main Screen Slogan  -->
    <string name="slogan_text_1">Генерируй идеи</string>
    <string name="slogan_text_2">Вдохновляйся</string>
    <string name="slogan_text_3">Будь самым стильным</string>
    <string name="slogan_text_4">Сосредоточься на главном</string>

    <!--  Main Screen Subscription Status -->
    <string name="without_subscription_text">
        Заметили, что вы еще\nне оформили подписку
    </string>
    <string name="with_subscription_text">
        Подписка активна\nСпасибо, что\nподдерживаете нас
    </string>
    <string name="not_authorized_text">
        Упс, выяснилось,\nчто вы не авторизированы\nИсправим это?
    </string>

    <string name="generation_btn_text">Генерация</string>
    <string name="start_authorization_btn_text">Авторизироваться</string>
    <string name="subscribe_btn_text">Оформить подписку</string>

    <string name="example_subscription_start_date">20 февраля 2025</string>
    <string name="example_subscription_end_date">6 июня 2025</string>


    <!--  Collection Screen Top App Bar  -->
    <string name="settings">Настройки</string>
    <string name="content_description_settings">Настройки</string>


    <!--  Gallery Screen Filters  -->
    <string name="sort_filter">Упорядочить</string>
    <string name="genres_filter">Жанры</string>
    <string name="mood_filter">Настроение</string>
    <string name="style_filter">Стиль</string>


    <!--  Generation Activity  -->
    <string name="select_audio_btn_text">Выбрать аудио</string>
    <string name="select_another_audio_btn_text">Изменить аудио</string>
    <string name="generate_btn">Сгенерировать</string>
    <string name="generation_activity_title">Генерация</string>


    <!--  Auto Generation Screen  -->
    <string name="upload_audio_text">Загрузите аудио</string>
    <string name="uploaded_audio_text">Загруженное аудио</string>


    <!--  Generation Setting View  -->
    <string name="auto_setting_status">Автоматически</string>
    <string name="not_auto_setting_status">Не автоматически</string>


    <!--  Detailed Generation Screen  -->
    <string name="audio_setting_name">Аудио</string>
    <string name="genres_setting_name">Жанры</string>
    <string name="mood_setting_name">Настроение</string>
    <string name="style_setting_name">Стиль</string>
    <string name="text_setting_name">Текст</string>

    <string name="audio_setting_btn_text">Выбрать</string>
    <string name="audio_delete_setting_btn_text">Удалить</string>
    <string name="default_setting_btn_text">Изменить</string>

    <string name="empty_genres_settings_chip_text_1">Жанры</string>
    <string name="empty_genres_settings_chip_text_2">не</string>
    <string name="empty_genres_settings_chip_text_3">выбраны</string>
    <string name="empty_mood_settings_chip_text">Настроение не выбрано</string>
    <string name="empty_style_settings_chip_text">Стиль не выбран</string>
    <string name="empty_text_settings_chip_text">Текст не указан</string>


    <!--  Authorization & Registration Activities  -->
    <string name="vk_login_btn_text">Войти через ВКонтакте</string>

    <string name="and_text_label">Или</string>

    <string name="nickname_text_field_hint">Псевдоним</string>
    <string name="email_text_field_hint">Почта</string>
    <string name="password_text_field_hint">Пароль</string>

    <string name="create_account_btn_text">Создать аккаунт</string>
    <string name="go_back_btn_text">Назад</string>
    <string name="login_btn_text">Войти</string>
    <string name="start_registration_btn_text">Регистрация</string>


    <!--  Prompt Generation Screen  -->
    <string name="input_prompt_text">Введите запрос</string>
    <string name="input_prompt_text_field_hint">Что вы хотите видеть на обложке?</string>


    <!--  Cover Activity  -->
    <string name="mock_cover_name">Название обложки</string>

    <string name="cover_info_text_separator"> ·</string>
    <string name="mock_additional_info">приватная</string>
    <string name="mock_created_date">19 марта 2024</string>

    <string name="prompt_parameter_name">19 марта 2024</string>

    <string name="mock_genre_parameter">Бум-бап</string>
    <string name="mock_mood_parameter">Радостное</string>
    <string name="mock_style_parameter">Реализм</string>
    <string name="mock_text_parameter">Закрываю дверь квартиры, отключаю все мобилы\nНедоступна для дебилов, потому что я влюбилась\nВ тебя (а-а), тупого наглеца, от чего же?\nОт чего же?\nВсё потому, что Дора дура, супер дура, Дора дура\nПотому, что Дора дура, супер дура, Дора дура\nПотому, что Дора дура, супер дура, Дора дура\nПотому, что Дора дура, дура, дура (дура, дура...)\nЯ увидела твой взгляд, заострённый на мне\nТы рукою помахал, я помахала в ответ\nТы пошёл ко мне навстречу, это было так глупо\nВедь за спиною моей стояла твоя подруга\nВсё потому, что Дора дура, супер дура, Дора дура\nПотому, что Дора дура, супер дура, Дора дура\nПотому, что Дора дура, супер дура, Дора дура\nПотому, что Дора дура, супер дура, Дора дура\nТы позвал меня на встречу (ой)\nТы позвал меня на встречу\nЯ готовилась весь вечер\nВыбирала, что надеть мне\nИстрепала свои нервы\nПришла, ждала почти два часа\nТы написал Sorry, я проспал \nВсё потому, что Дора дура, супер дура, Дора дура \nПотому, что Дора дура, супер дура, Дора дура \nПотому, что Дора дура, супер дура, Дора дура \nПотому, что Дора дура, супер дура, Дора дура</string>
    <string name="mock_prompt_parameter">"Абстрактная обложка для музыкального трека в жанре электроника, с яркими неоновыми цветами, геометрическими фигурами и космической атмосферой"</string>


    <!--  Bottom Sheet Btns  -->
    <string name="cancel_btn_text">Отменить</string>
    <string name="reset_btn_text">Сбросить</string>
    <string name="apply_btn_text">Применить</string>


    <!--  Bottom Sheet Text Editor  -->
    <string name="input_audio_text_text_field_hint">Введите текст аудио</string>


    <!--  Audio File Info View  -->
    <string name="file_not_choose_audio_name">Файл не выбран</string>


    <!--  Bottom Sheet Input Cover Name  -->
    <string name="input_cover_name_bottom_sheet_title">Название обложки</string>
    <string name="input_cover_name_text_field_hint">Введите название обложки</string>
    <string name="generation_start_snackbar_text">Генерация началась</string>
</resources>