<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/TextAppearance.VisualMusic.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:text="@string/input_cover_name_bottom_sheet_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drag_handle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        style="@style/Widget.VisualMusic.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:hint="@string/input_cover_name_text_field_hint"
            android:inputType="textImeMultiLine|textMultiLine"
            android:maxLines="3"
            android:lines="3"
            android:maxLength="@integer/max_cover_name_length"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_back_btn"
        style="@style/Widget.VisualMusic.Button.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:text="@string/go_back_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/generate_btn"
        app:layout_constraintTop_toBottomOf="@id/input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generate_btn"
        style="@style/Widget.VisualMusic.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:enabled="false"
        android:text="@string/generate_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/go_back_btn"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>