<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surfaceContainerLowest"
    tools:context=".presentation.main.screen.gallery.GalleryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_app_bar"
        style="@style/Widget.VisualMusic.TopAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/gallery_screen_title"
        app:titleTextAppearance="@style/TextAppearance.VisualMusic.TitleLarge" />

    <com.google.android.material.chip.Chip
        android:id="@+id/sort"
        style="@style/Widget.Material3.Chip.Filter.Elevated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:minWidth="32dp"
        android:minHeight="34dp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/ic_sort"
        app:chipIconEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar"
        app:textEndPadding="0dp"
        app:textStartPadding="0dp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/genres_filter"
        style="@style/Widget.Material3.Chip.Filter.Elevated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/genres_filter"
        app:checkedIconVisible="false"
        app:closeIcon="@drawable/ic_arrow_drop_down"
        app:closeIconEnabled="true"
        app:closeIconEndPadding="-3dp"
        app:layout_constraintLeft_toRightOf="@id/sort"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar" />

    <com.google.android.material.chip.Chip
        android:id="@+id/mood_filter"
        style="@style/Widget.Material3.Chip.Filter.Elevated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:text="@string/mood_filter"
        app:checkedIconVisible="false"
        app:closeIcon="@drawable/ic_arrow_drop_down"
        app:closeIconEnabled="true"
        app:closeIconEndPadding="-3dp"
        app:layout_constraintLeft_toRightOf="@id/genres_filter"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar" />

    <com.google.android.material.chip.Chip
        android:id="@+id/style_filter"
        style="@style/Widget.Material3.Chip.Filter.Elevated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10dp"
        android:text="@string/style_filter"
        app:checkedIconVisible="false"
        app:closeIcon="@drawable/ic_arrow_drop_down"
        app:closeIconEnabled="true"
        app:closeIconEndPadding="-3dp"
        app:layout_constraintLeft_toRightOf="@id/mood_filter"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort" />

</androidx.constraintlayout.widget.ConstraintLayout>